[gd_scene load_steps=22 format=3 uid="uid://cflkesovqb44q"]

[ext_resource type="Texture2D" uid="uid://wi6e3alnmqh0" path="res://sprites/main.png" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://w11jygroadmh" path="res://scripts/ui/hud.gd" id="1_oo0fn"]
[ext_resource type="Script" uid="uid://c6idgfnvj6gyg" path="res://scripts/ui/life.gd" id="3_6fi6k"]
[ext_resource type="Script" uid="uid://bpfag8i8be7xl" path="res://scripts/ui/stamina.gd" id="3_hd3ao"]
[ext_resource type="Script" uid="uid://tjmj5v6lw2as" path="res://scripts/ui/life_bar.gd" id="3_uo2fv"]
[ext_resource type="Texture2D" uid="uid://dj6nc2r4uunkq" path="res://sprites/life.png" id="4_uo2fv"]
[ext_resource type="Script" uid="uid://cj0go07001qmk" path="res://scripts/ui/number_display.gd" id="6_5pdws"]
[ext_resource type="PackedScene" uid="uid://d1mcya8jqefql" path="res://scenes/ui/digit_display.tscn" id="6_047uy"]
[ext_resource type="FontFile" uid="uid://m2gxs3lik11m" path="res://fonts/Tiny5-Regular.ttf" id="9_4jqwt"]
[ext_resource type="Script" uid="uid://cil6812nlkvdc" path="res://scripts/ui/level_label.gd" id="10_kicr4"]
[ext_resource type="Script" uid="uid://db68p5fjedisk" path="res://scripts/ui/high_score_label.gd" id="11_mj13f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oo0fn"]
atlas = ExtResource("1_ahhtf")
region = Rect2(16, 72, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahhtf"]
atlas = ExtResource("1_ahhtf")
region = Rect2(16, 64, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i1j5"]
atlas = ExtResource("1_ahhtf")
region = Rect2(48, 64, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mphia"]
atlas = ExtResource("1_ahhtf")
region = Rect2(48, 72, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fi6k"]
atlas = ExtResource("4_uo2fv")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd3ao"]
atlas = ExtResource("4_uo2fv")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_047uy"]
atlas = ExtResource("4_uo2fv")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pdws"]
atlas = ExtResource("4_uo2fv")
region = Rect2(8, 0, 8, 8)

[sub_resource type="LabelSettings" id="LabelSettings_kicr4"]
font = ExtResource("9_4jqwt")
font_size = 32
font_color = Color(0.37254903, 0.34117648, 0.30980393, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mj13f"]
font = ExtResource("9_4jqwt")
font_size = 32
font_color = Color(0.37254903, 0.34117648, 0.30980393, 1)

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oo0fn")

[node name="Energy" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(20, 0)

[node name="CenterContainer" type="CenterContainer" parent="Energy"]
layout_mode = 2

[node name="Stamina" type="TextureProgressBar" parent="Energy/CenterContainer"]
layout_mode = 2
step = 3.125
value = 50.0
texture_under = SubResource("AtlasTexture_oo0fn")
texture_progress = SubResource("AtlasTexture_ahhtf")
script = ExtResource("3_hd3ao")
_flash_sprite = SubResource("AtlasTexture_0i1j5")
_normal_sprite = SubResource("AtlasTexture_ahhtf")

[node name="PowerupTimer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 34.0
offset_right = 20.0
offset_bottom = 74.0
grow_horizontal = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(20, 0)

[node name="CenterContainer" type="CenterContainer" parent="PowerupTimer"]
layout_mode = 2

[node name="PowerupTimer" type="TextureProgressBar" parent="PowerupTimer/CenterContainer"]
visible = false
layout_mode = 2
step = 3.125
value = 50.0
texture_under = SubResource("AtlasTexture_oo0fn")
texture_progress = SubResource("AtlasTexture_mphia")
script = ExtResource("3_hd3ao")
_flash_sprite = SubResource("AtlasTexture_0i1j5")
_normal_sprite = SubResource("AtlasTexture_mphia")

[node name="Life" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_top = 36.0
offset_right = 10.0
offset_bottom = 44.0
grow_horizontal = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(10, 0)

[node name="HFlowContainer" type="HFlowContainer" parent="Life" node_paths=PackedStringArray("parent")]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/h_separation = -2
alignment = 1
script = ExtResource("3_uo2fv")
parent = NodePath("..")

[node name="Life" type="TextureRect" parent="Life/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("AtlasTexture_6fi6k")
script = ExtResource("3_6fi6k")
_flash_sprite = SubResource("AtlasTexture_hd3ao")
_full_sprite = SubResource("AtlasTexture_047uy")
_empty_sprite = SubResource("AtlasTexture_5pdws")

[node name="Life2" type="TextureRect" parent="Life/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("AtlasTexture_6fi6k")
script = ExtResource("3_6fi6k")
_flash_sprite = SubResource("AtlasTexture_hd3ao")
_full_sprite = SubResource("AtlasTexture_047uy")
_empty_sprite = SubResource("AtlasTexture_5pdws")

[node name="Life3" type="TextureRect" parent="Life/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("AtlasTexture_6fi6k")
script = ExtResource("3_6fi6k")
_flash_sprite = SubResource("AtlasTexture_hd3ao")
_full_sprite = SubResource("AtlasTexture_047uy")
_empty_sprite = SubResource("AtlasTexture_5pdws")

[node name="Score" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -66.0
offset_right = 20.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(4, 4)
pivot_offset = Vector2(19, 0)

[node name="HFlowContainer" type="HFlowContainer" parent="Score"]
layout_mode = 2
theme_override_constants/h_separation = -1
alignment = 1
script = ExtResource("6_5pdws")

[node name="DigitDisplay" parent="Score/HFlowContainer" instance=ExtResource("6_047uy")]
layout_mode = 2

[node name="DigitDisplay2" parent="Score/HFlowContainer" instance=ExtResource("6_047uy")]
layout_mode = 2

[node name="DigitDisplay3" parent="Score/HFlowContainer" instance=ExtResource("6_047uy")]
layout_mode = 2

[node name="DigitDisplay4" parent="Score/HFlowContainer" instance=ExtResource("6_047uy")]
layout_mode = 2

[node name="DigitDisplay5" parent="Score/HFlowContainer" instance=ExtResource("6_047uy")]
layout_mode = 2

[node name="DigitDisplay6" parent="Score/HFlowContainer" instance=ExtResource("6_047uy")]
layout_mode = 2

[node name="LevelDisplay" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -93.0
offset_right = 153.0
offset_bottom = -17.0
grow_vertical = 0

[node name="LevelLabel" type="Label" parent="LevelDisplay"]
layout_mode = 2
text = "Level "
label_settings = SubResource("LabelSettings_kicr4")
vertical_alignment = 1
script = ExtResource("10_kicr4")

[node name="HighScoreLabel" type="Label" parent="LevelDisplay"]
layout_mode = 2
text = "Hi: 000000"
label_settings = SubResource("LabelSettings_mj13f")
script = ExtResource("11_mj13f")

[connection signal="internal_difficulty_level_updated" from="." to="LevelDisplay/LevelLabel" method="update_level"]
[connection signal="internal_health_updated" from="." to="Life/HFlowContainer" method="display_life"]
[connection signal="internal_powerup_ended" from="." to="PowerupTimer/CenterContainer/PowerupTimer" method="hide"]
[connection signal="internal_powerup_started" from="." to="PowerupTimer/CenterContainer/PowerupTimer" method="show" unbinds=1]
[connection signal="internal_powerup_timer_updated" from="." to="PowerupTimer/CenterContainer/PowerupTimer" method="_change_progress"]
[connection signal="internal_score_updated" from="." to="Score/HFlowContainer" method="display_value"]
[connection signal="internal_stamina_updated" from="." to="Energy/CenterContainer/Stamina" method="set_value"]
[connection signal="value_changed" from="Energy/CenterContainer/Stamina" to="Energy/CenterContainer/Stamina" method="_flash" unbinds=1]
[connection signal="value_changed" from="PowerupTimer/CenterContainer/PowerupTimer" to="PowerupTimer/CenterContainer/PowerupTimer" method="_flash" unbinds=1]
[connection signal="life_lost" from="Life/HFlowContainer" to="." method="_internal_on_life_lost"]
